--- a/blog-server/package.json
+++ b/blog-server/package.json
@@ -15,9 +15,11 @@
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
-    "sequelize": "^5.22.0"
+    "sequelize": "^5.22.0",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
